codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 1638
expression: rendered
---
• Explored
  └ Read auth.rs, shimmer.rs
