codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 1601
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
