codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 1544
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
