codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_snapshot.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 628
expression: rendered
---
ⓘ This chat was flagged for possible cybersecurity risk
  If this seems wrong, try rephrasing your request. To get authorized for
  security work, join the Trusted Access for Cyber program.
  https://chatgpt.com/cyber
