codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 865
expression: rendered
---
/mcp

🔌  MCP Tools

  • plugin_docs
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server --stdio
    • Tools: lookup
    • Resources: Docs (file:///docs)
    • Resource templates: Doc Template (file:///docs/{id})
