codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__mcp_tools_output_masks_sensitive_values.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 744
expression: rendered
---
/mcp

🔌  MCP Tools

  • docs
    • Status: enabled
    • Auth: Unsupported
    • Command: docs-server
    • Env: TOKEN=*****, APP_TOKEN=*****
    • Tools: list
    • Resources: (none)
    • Resource templates: (none)

  • http
    • Status: enabled
    • Auth: Unsupported
    • URL: https://example.com/mcp
    • HTTP headers: Authorization=*****
    • Env HTTP headers: X-API-Key=API_KEY_ENV
    • Tools: ping
    • Resources: (none)
    • Resource templates: (none)
