codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_chunk_leading_whitespace_snapshot.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 674
expression: rendered
---
/ps

Background terminals

  • just fix
    ↳   indented first
          more indented
