codex-rs/tui-render/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_empty_snapshot.snap
---
source: tui-render/src/history_cell/tests.rs
assertion_line: 532
expression: rendered
---
/ps

Background terminals

  • No background terminals running.
